--- a/wyniki/templates/wyniki/home.html
+++ b/wyniki/templates/wyniki/home.html
@@ -10,7 +10,7 @@ Home
     {% if request.user.groups.all.0.name == 'Lekarze' %}
         <p><a href="{% url 'add_results' user.username %}">Add new results</a></p>
     {% endif %}
-    <p><a href="{% url 'hello_there' user.username %}">History of results</a></p>
+    <p><a href="{% url 'history' user.username %}">History of results</a></p>
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
     <p>You are not logged in</p>
