--- a/wyniki/templates/wyniki/edit_results.html
+++ b/wyniki/templates/wyniki/edit_results.html
@@ -5,9 +5,8 @@ Edit result
 {% block content %}
         {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static 'wyniki/site.css' %}" />
-    </head>
     <body>
-    <form action="edit_study" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         <label for="patient_id">Patient ID: </label>
         <input id="patient_id" type="text" name="patient_id" value={{ result.patient_id }} >
@@ -19,7 +18,7 @@ Edit result
         <input id="hospital" type="text" name="hospital" value={{ result.hospital }}>
         <br>
         <label for="date">Date of examination: </label>
-        <input id="date" type="date" name="date" value={{ result.study_date }}>
+        <input id="date" type="date" name="date" value={{ date }}>
         <br>
         <label for="time">Time of examination: </label>
         <input id="time" type="time" name="time" >
@@ -27,7 +26,7 @@ Edit result
         <label for="note">Note: </label>
         <input id="note" type="text" name="note" >
         <br>
-        <input type="submit" value="Edit">
+        <input type="submit" value="Edit" >
     </form>
     {{msg}}
     </body>
