add preview for study

--- a/wyniki/templates/wyniki/edit_results.html
+++ b/wyniki/templates/wyniki/edit_results.html
@@ -21,7 +21,7 @@ Edit result
         <input id="date" type="date" name="date" value={{ date }}>
         <br>
         <label for="time">Time of examination: </label>
-        <input id="time" type="time" name="time" >
+        <input id="time" type="time" name="time" value={{ result.study_time }} >
         <br>
         <label for="note">Note: </label>
         <input id="note" type="text" name="note" >
