--- a/wyniki/templates/wyniki/layout.html
+++ b/wyniki/templates/wyniki/layout.html
@@ -11,7 +11,7 @@
 <body>
 <div class="navbar">
     <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-    <a href="{% url 'home' %}" class="navbar-brand"><img src="../../static/wyniki/images/heart.png" alt="heart"></a>
+    <a href="{% url 'home' %}" class="navbar-brand"><img src="{% static "wyniki/images/heart.png" %}" alt="heart"></a>
     <a href="{% url 'about' %}" class="navbar-item">About</a>
     {% if user.is_authenticated %}
         <a href="{% url 'hello_there' user.username %}"  class="navbar-item">Hello there</a>
