--- a/wyniki/templates/wyniki/add_results.html
+++ b/wyniki/templates/wyniki/add_results.html
@@ -24,7 +24,7 @@ Add new result
         <input id="time" type="time" name="time">
         <br>
         <label for="note">Note: </label>
-        <input id="note" type="text" name="note">
+        <textarea class="textarea" id="note" name="note">{{ result.note }}</textarea>
         <br>
         <label for="pathfile">Image URL: </label>
         <input id="pathfile" type="text" name="pathfile">
