Updated images in edit and preview

--- a/wyniki/templates/wyniki/add_results.html
+++ b/wyniki/templates/wyniki/add_results.html
@@ -6,7 +6,7 @@ Add new result
         {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static 'wyniki/site.css' %}" />
     <body>
-    <form action="create_study" method="post">
+    <form action="create_study" method="post" enctype = "multipart/form-data">
         {% csrf_token %}
         <label for="patient_id">Patient ID: </label>
         <input id="patient_id" type="text" name="patient_id">
@@ -23,13 +23,15 @@ Add new result
         <label for="time">Time of examination: </label>
         <input id="time" type="time" name="time">
         <br>
-        <label for="file">File: </label>
-        <input id="file" type="text" name="file">
-        <br>
         <label for="note">Note: </label>
         <textarea class="textarea" id="note" name="note">{{ result.note }}</textarea>
         <br>
-
+        <label for="pathfile">Image URL: </label>
+        <input id="pathfile" type="text" name="pathfile">
+        <br>
+        <label for="image">Image object: </label>
+        <input id="actual-btn" type="file" name="image">
+        <br>
         <input type="submit" value="Save">
     </form>
     {{msg}}
