--- a/wyniki/templates/wyniki/layout.html
+++ b/wyniki/templates/wyniki/layout.html
@@ -6,20 +6,21 @@
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'wyniki/site.css' %}"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 <div class="navbar">
     <a href="{% url 'home' %}" class="navbar-brand">Home</a>
     <a href="{% url 'home' %}" class="navbar-brand"><img src="{% static "wyniki/images/heart.png" %}" alt="heart"></a>
-    <a href="{% url 'about' %}" class="navbar-item">About</a>
     {% if user.is_authenticated %}
-        <a href="{% url 'hello_there' user.username %}"  class="navbar-item">Hello there</a>
         <a href="{% url 'history' user.username %}"  class="navbar-item">History</a>
         {% if request.user.groups.all.0.name == 'Lekarze' %}
             <a href="{% url 'add_results' user.username %}" class="navbar-item">Add new results</a>
         {% endif %}
+        <a href="{% url 'logout' %}"><button class="navbar-item" style="float:right" >Log out <i class="fa fa-sign-out"></i></button></a>
         <a style="float:right" class="navbar-item">{{ user.username }}</a>
+
     {% endif %}
     <a style="float:right" class="navbar-item"></a>
 </div>
